Added radio buttons to chart to select series in either row or column